# lyrihs

./: flake.nix  lyrihs.cabal
app/: Main.hs
doc/html/lyrihs/: Lyrihs-API.html  doc-index.html  lyrihs.haddock
docs/: index.html
src/: Lyrihs.hs
src/Lyrihs/: API.hs
